--- a/lj.html
+++ b/lj.html
@@ -1,6 +1,6 @@
 <html>
 
-<head>
+<head><META NAME="description" CONTENT="基督教共产主义,紫薇圣人,网哲"><META NAME="keywords" CONTENT="葛亦民,神教,神经,大同世界">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>神教网址导航</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />  
@@ -15,11 +15,13 @@
 	<b>&nbsp;</b></font><b><font size="5">神教所有网站</font></b><p><br><br>
 	
 
-<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
-	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 &nbsp;
-	<a target="_blank" href="http://www.20331126.xyz">大同世界网</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">大同世界社区</a>
-	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+	<a target="_blank" href="http://www.20331126.xyz">大同世界网</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">大同世界社区</a>
+	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;<font color="#800000">  <b>  <a target="_blank" href="http://www.gegod.com/nszz/gymsp.htm">葛亦民视频赞美歌</a></b>&nbsp;  
+
+	</font> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/">留言本</a></b>
 	</b> </font>
 <p>
 	<font size="4">
@@ -27,13 +29,11 @@
 	<br>
 	<font color="#800000">旗舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  
 	</font> </b>
-	<font color="#800000">  <b>  <a target="_blank" href="http://www.gegod.com/nszz/gymsp.htm">葛亦民视频、赞美歌</a></b>&nbsp;  
-
-	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
+	</font><font size="4" color="#800000">&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" href="http://www.kaila.com.cn/">神网</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.kaila.com.cn/bbs">大同世界社区</a>&nbsp;&nbsp; &nbsp;&nbsp;
 	
-	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;  <a target="_blank" href="http://www.wjxw-lib.net/bbs">大同世界社区</a> &nbsp; &nbsp;&nbsp;
-	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-<a target="_blank" href="http://bbs.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
+	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;&nbsp; <a target="_blank" href="http://bbs.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://home.20331126.xyz">yooco论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;
@@ -45,38 +45,43 @@
 	<span lang="en-us">
 	<font size="4">
 	&nbsp;&nbsp;<br><br><p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<font size="4">
-	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
+	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font>  <a target="_blank" href="http://www.wjxw-lib.net/">神网</a> &nbsp; &nbsp;&nbsp; <a target="_blank" href="http://www.wjxw-lib.net/bbs">葛亦民社区</a> &nbsp; &nbsp;&nbsp;
 		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://weibo.com/g20331126">微博</a>&nbsp; &nbsp;&nbsp;
 	
 	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp; &nbsp;<a target="_blank" href="http://www.geyimin.space/bbs">紫薇圣人社区</a>
 	&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" href="http://us.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 
-<a target="_blank" href="http://hao.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a target="_blank" href="http://hao.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;<span lang="zh-cn">&nbsp;
+</span>&nbsp;
 
 
  <a target="_blank" href="http://sb.20331126.xyz">投票</a>&nbsp; &nbsp;
 </font>
 
 	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/">留言本</a></b>
+		
 <p> 
-<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：<font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;葛亦民异闻录&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><span lang="en-us"><font size="4"><b> 
+<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：<font size="4">葛亦民异闻录&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><span lang="en-us"><font size="4"><b> 
 QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
 	
-	</font></span><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微视号： geyimin&nbsp;&nbsp; </font><br>
+	</font></span><font size="4">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微视号：geyimin&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font>
+	
+	<a target="_blank" a href="http://www.gegod.com/video/">神网视频库</a>
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/picture/">神网图片库</a><br>
 	<p>
 <br>
 	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
 	
-	&nbsp;<font size="4"><a target="_blank" href="http://geyimin.eu.org/bbs">神论坛</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.kaila.com.cn/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	&nbsp;<font size="4"><a target="_blank" href="http://geyimin.eu.org/bbs">神论坛</a>&nbsp;&nbsp;&nbsp; 
+<span lang="zh-cn">&nbsp;</span>&nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
     <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp; &nbsp;
  
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
-<a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp;&nbsp;&nbsp; &nbsp;
-<a target="_blank" href="http://web.20331126.xyz/bbs">紫微圣人社区</a>&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" href="http://bbs.gegod.eu.org">德国论坛</a>&nbsp;&nbsp; &nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;<a target="_blank"href="http://www.gegod.eu.org">神网</a>
+<a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://sb.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://my.20331126.xyz/bbs">葛亦民社区</a>
+	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+<a target="_blank" href="http://web.20331126.xyz/bbs">紫微圣人社区</a>&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://www.gegod.eu.org">神网</a>
 	
 
 		
@@ -86,9 +91,11 @@ QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
 
 	<b><font color="#800000"> 补给舰：</font></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
 
-
+<a target="_blank" href="http://bbs.gegod.eu.org">德国论坛</a>&nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://sb.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	 <a target="_blank" href="http://geyimin.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
  <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
  <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
  <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://www.geyimin.gay">葛亦民网</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
